--- a/pom.xml
+++ b/pom.xml
@@ -15,87 +15,64 @@
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>web</module>
 		<module>data-model</module>
+		<module>web</module>
 		<module>sys-tests</module>
 	</modules>
 	<properties>
 		<slf4j.version>1.6.4</slf4j.version>
 		<kryo.version>2.22</kryo.version>
 		<commons.codec.version>1.9</commons.codec.version>
+		<slf4j.version>1.6.4</slf4j.version>
 	</properties>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.gigaspaces.httpsession</groupId>
+				<artifactId>gs-session-manager</artifactId>
+				<version>1.0.0</version>
+				<scope>import</scope>
+				<exclusions>
+					<exclusion>
+						<artifactId>shiro-all</artifactId>
+						<groupId>org.apache.shiro</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>gs-runtime</artifactId>
+						<groupId>com.gigaspaces</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>kryo</artifactId>
+						<groupId>com.esotericsoftware.kryo</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>xstream</artifactId>
+						<groupId>com.thoughtworks.xstream</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>xmlbeans</artifactId>
+						<groupId>org.apache.xmlbeans</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>slf4j-api</artifactId>
+						<groupId>org.slf4j</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.esotericsoftware.kryo</groupId>
-			<artifactId>kryo</artifactId>
-			<version>${kryo.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.gigaspaces.httpsession</groupId>
-			<artifactId>gs-session-manager</artifactId>
-			<version>1.0.0</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>shiro-all</artifactId>
-					<groupId>org.apache.shiro</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>gs-runtime</artifactId>
-					<groupId>com.gigaspaces</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>kryo</artifactId>
-					<groupId>com.esotericsoftware.kryo</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>xstream</artifactId>
-					<groupId>com.thoughtworks.xstream</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>xmlpull</artifactId>
-					<groupId>xmlpull</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>xpp3_min</artifactId>
-					<groupId>xpp3</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>xmlbeans</artifactId>
-					<groupId>org.apache.xmlbeans</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>stax-api</artifactId>
-					<groupId>stax</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>slf4j-api</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
-			<scope>test</scope>
-		</dependency>
-		
-				<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>${commons.codec.version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>1.3.2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>${commons.codec.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<reporting>
 		<plugins>
 			<plugin>
