--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -8,19 +8,43 @@
 		<artifactId>http-session-itests</artifactId>
 		<version>1.0.0</version>
 	</parent>
+	
 	<artifactId>sys-tests</artifactId>
 	<name>sys-tests</name>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.8.2</junit.version>
 	</properties>
+
 	<dependencies>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.gigaspaces.httpsession</groupId>
+			<artifactId>gs-session-manager</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.gigaspaces.httpsession.qa</groupId>
+			<artifactId>data-model</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 </project>
