fix system tests bugs

--- a/web/src/main/webapp/WEB-INF/shiro.ini
+++ b/web/src/main/webapp/WEB-INF/shiro.ini
@@ -12,8 +12,6 @@ connector.sessionLease = 1800000
 # Default read timeout is 5 minutes = 5 * 60 * 1000 = 300000
 connector.readTimeout = 300000
 
-#sessionManager = org.apache.shiro.web.session.mgt.StandardWebSessionManager
-#sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 sessionManager = com.gigaspaces.httpsession.GigaSpacesWebSessionManager
 
 #set the sessionManager to use an enterprise cache for backing storage:
@@ -32,9 +30,9 @@ cacheManager = com.gigaspaces.httpsession.sessions.GigaSpacesCacheManager
 #cacheManager.compressor = $compressor
 
 # Model Manager service
-modelManager = com.gigaspaces.httpsession.sessions.DeltaModeManager
+modelManager = com.gigaspaces.httpsession.sessions.FullModelManager
 modelManager.connector = $connector
-modelManager.policyType = com.gigaspaces.httpsession.policies.FailFastChangePolicy
+#modelManager.policyType = com.gigaspaces.httpsession.policies.FailFastChangePolicy
 listener1 = com.gigaspaces.httpsession.policies.TraceListener
 modelManager.listener = $listener1
 
