--- a/web/src/main/webapp/WEB-INF/shiro.ini
+++ b/web/src/main/webapp/WEB-INF/shiro.ini
@@ -1,6 +1,4 @@
 [main]
-authc.loginUrl = /login.jsp
-
 # space proxy wraper
 connector = com.gigaspaces.httpsession.SpaceConnector
 connector.url = jini://*/*/sessionSpace
@@ -11,7 +9,10 @@ connector.url = jini://*/*/sessionSpace
 connector.sessionLease = 1800000
 # Default read timeout is 5 minutes = 5 * 60 * 1000 = 300000
 connector.readTimeout = 300000
+#connector.enableTransaction = true
 
+#sessionManager = org.apache.shiro.web.session.mgt.StandardWebSessionManager
+#sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 sessionManager = com.gigaspaces.httpsession.GigaSpacesWebSessionManager
 
 #set the sessionManager to use an enterprise cache for backing storage:
@@ -25,10 +26,6 @@ securityManager.sessionManager = $sessionManager
 # whatever your CacheManager implementation is, for example:
 cacheManager = com.gigaspaces.httpsession.sessions.GigaSpacesCacheManager
 
-# Compression service
-#compressor = com.gigaspaces.httpsession.serialize.DefaultCompressor
-#cacheManager.compressor = $compressor
-
 # Model Manager service
 modelManager = com.gigaspaces.httpsession.sessions.FullModelManager
 modelManager.connector = $connector
@@ -39,10 +36,12 @@ modelManager.listener = $listener1
 cacheManager.modelManager = $modelManager
 # Serialization Service
 serializer = com.gigaspaces.httpsession.serialize.KryoSerializerImpl
+serializer.logLevel = 1
+#### classes registation: class1, class2, ...,classN
 #serializer.classes = com.gigaspaces.httpsession.sessions.NestSerial , com.gigaspaces.httpsession.sessions.NestNonSerial
 cacheManager.serializer = $serializer
 # Session Policy Service
-policy = com.gigaspaces.httpsession.policies.SessionPolicyWithLogin
+policy = com.gigaspaces.httpsession.policies.SessionPolicyWithoutLogin
 policy.connector = $connector
 policy.modelManager = $modelManager
 
@@ -65,28 +64,3 @@ sessionValidationScheduler.interval = 1800000
 sessionValidationScheduler.sessionManager = $sessionManager
 
 securityManager.sessionManager.sessionValidationScheduler = $sessionValidationScheduler
-
-[users]
-## format: username = password, role1, role2, ..., roleN
-root = secret,admin
-guest = guest,guest
-presidentskroob = 12345,president
-darkhelmet = ludicrousspeed,darklord,schwartz
-lonestarr = vespa,goodguy,schwartz
-
-[roles]
-## format: roleName = permission1, permission2, ..., permissionN
-admin = *
-schwartz = lightsaber:*
-goodguy = winnebago:drive:eagle5
-
-[urls]
-## The /login.jsp is not restricted to authenticated users (otherwise no one could log in!), but
-## the 'authc' filter must still be specified for it so it can process that url's
-## login submissions. It is 'smart' enough to allow those requests through as specified by the
-## shiro.loginUrl above.
-/login.jsp = authc
-/** = authc
-##/logout = logout
-##/account/** = authc
-/remoting/** = authc, roles[b2bClient], perms["remote:invoke:lan,wan"]
