--- a/sys-tests/src/test/resources/config/config.properties
+++ b/sys-tests/src/test/resources/config/config.properties
@@ -1,4 +1,5 @@
 JBOSS_HOME=/Users/shadim/dev-tools/jboss-as-7.1.1.Final
+project.basedir=/Users/shadim/src/http-session-itests/sys-tests
 TOMCAT_HOME=/Users/shadim/dev-tools/apache-tomcat-7.0.50
 JMETER_HOME=/Users/shadim/dev-tools/apache-jmeter-2.11
 GS_HOME=/Users/shadim/dev-tools/gigaspaces-xap-premium-9.7.0-ga/bin
