--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -8,7 +8,7 @@
 		<artifactId>http-session-itests</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	
+
 	<artifactId>sys-tests</artifactId>
 	<name>sys-tests</name>
 
@@ -47,4 +47,38 @@
 			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <argLine>-Xmx256m -Xms256m</argLine>
+                    <includes>
+                        <include>**/SystemTestSuite.java</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/*SystemTestCase*</exclude>
+                        <exclude>**/*Abstract*</exclude>
+                        <exclude>**/*TestWithoutLoginBase*</exclude>
+                        <exclude>**/*TestWithLoginBase*</exclude>
+                    </excludes>
+                    <additionalClasspathElements>
+                        <additionalClasspathElement>src/test/resources</additionalClasspathElement>
+                    </additionalClasspathElements>
+                </configuration>
+            </plugin>
+
+		</plugins>
+	</build>
 </project>
