--- a/sys-tests/src/test/resources/config/config.properties
+++ b/sys-tests/src/test/resources/config/config.properties
@@ -3,6 +3,6 @@ project.basedir=/Users/shadim/src/http-session-itests/sys-tests
 TOMCAT_HOME=/Users/shadim/dev-tools/apache-tomcat-7.0.50
 JMETER_HOME=/Users/shadim/dev-tools/apache-jmeter-2.11
 GS_HOME=/Users/shadim/dev-tools/gigaspaces-xap-premium-9.7.0-ga/bin
-JETTY_HOME=/Users/shadim/dev-tools/jetty
+JETTY_HOME=/Users/shadim/dev-tools/jetty-distribution-9.2.0.v20140526
 SPACE_URL=
 HOST=127.0.0.1
