rename some classes to more conventional names then change configuration respectively

--- a/web/src/main/webapp/WEB-INF/shiro.ini
+++ b/web/src/main/webapp/WEB-INF/shiro.ini
@@ -27,13 +27,13 @@ securityManager.sessionManager = $sessionManager
 cacheManager = com.gigaspaces.httpsession.sessions.GigaSpacesCacheManager
 
 # Model Manager service
-modelManager = com.gigaspaces.httpsession.sessions.FullModelManager
-modelManager.connector = $connector
-#modelManager.policyType = com.gigaspaces.httpsession.policies.FailFastChangePolicy
+storeMode = com.gigaspaces.httpsession.sessions.FullStoreMode
+storeMode.connector = $connector
+#storeMode.policyType = com.gigaspaces.httpsession.policies.FailFastChangeStrategy
 listener1 = com.gigaspaces.httpsession.policies.TraceListener
-modelManager.listener = $listener1
+storeMode.listener = $listener1
 
-cacheManager.modelManager = $modelManager
+cacheManager.storeMode = $storeMode
 # Serialization Service
 serializer = com.gigaspaces.httpsession.serialize.KryoSerializerImpl
 serializer.logLevel = 1
@@ -43,7 +43,7 @@ cacheManager.serializer = $serializer
 # Session Policy Service
 policy = com.gigaspaces.httpsession.policies.SessionPolicyWithoutLogin
 policy.connector = $connector
-policy.modelManager = $modelManager
+policy.storeMode = $storeMode
 
 cacheManager.policy = $policy
 # space proxy setter
