--- a/web/src/main/webapp/WEB-INF/shiro.ini
+++ b/web/src/main/webapp/WEB-INF/shiro.ini
@@ -29,7 +29,7 @@ cacheManager = com.gigaspaces.httpsession.sessions.GigaSpacesCacheManager
 # Model Manager service
 storeMode = com.gigaspaces.httpsession.sessions.FullStoreMode
 storeMode.connector = $connector
-#storeMode.policyType = com.gigaspaces.httpsession.policies.FailFastChangeStrategy
+#storeMode.changeStrategy = com.gigaspaces.httpsession.policies.FailFastChangeStrategy
 listener1 = com.gigaspaces.httpsession.policies.TraceListener
 storeMode.listener = $listener1
 
