--- a/data-model/pom.xml
+++ b/data-model/pom.xml
@@ -3,8 +3,8 @@
 	<parent>
 		<groupId>com.gigaspaces.httpsession.qa</groupId>
 		<artifactId>http-session-itests</artifactId>
-		<version>1.0.0</version>
 		<relativePath>../pom.xml</relativePath>
+		<version>${gs.version}</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
