--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,8 +12,8 @@
 	<parent>
 		<groupId>com.gigaspaces.httpsession.qa</groupId>
 		<artifactId>http-session-itests</artifactId>
-		<version>1.0.0</version>
 		<relativePath>../pom.xml</relativePath>
+		<version>${gs.version}</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -92,7 +92,7 @@
 		<dependency>
 			<groupId>com.gigaspaces.httpsession.qa</groupId>
 			<artifactId>data-model</artifactId>
-			<version>1.0.0</version>
+			<version>${gs.version}</version>
 		</dependency>
 
 		<dependency>
