--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.gigaspaces.httpsession.qa</groupId>
 		<artifactId>http-session-itests</artifactId>
-		<version>${gs.version}</version>
+		<version>9.7.0-10496-RELEASE</version>
 	</parent>
 
 	<artifactId>sys-tests</artifactId>
