--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.gigaspaces.httpsession.qa</groupId>
 		<artifactId>http-session-itests</artifactId>
-		<version>9.7.0-10496-RELEASE</version>
+		<version>10.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>sys-tests</artifactId>
@@ -83,7 +83,15 @@
 					</additionalClasspathElements>
 				</configuration>
 			</plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+                <version>2.3.2</version>
+            </plugin>
 		</plugins>
 	</build>
 </project>
