--- a/web/pom.xml
+++ b/web/pom.xml
@@ -13,7 +13,7 @@
 		<groupId>com.gigaspaces.httpsession.qa</groupId>
 		<artifactId>http-session-itests</artifactId>
 		<relativePath>../pom.xml</relativePath>
-		<version>9.7.0-10496-RELEASE</version>
+		<version>10.0.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
