--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -85,6 +85,7 @@
                     <systemProperties>
                         <lookupgroup>${group}</lookupgroup>
                     </systemProperties>
+                    <testFailureIgnore>true</testFailureIgnore>
 				</configuration>
 			</plugin>
             <plugin>
