--- a/web/src/main/webapp/WEB-INF/shiro.ini
+++ b/web/src/main/webapp/WEB-INF/shiro.ini
@@ -53,14 +53,14 @@ cacheManager.connector= $connector
 securityManager.cacheManager = $cacheManager
 
 # Session validation
-sessionValidationScheduler = org.apache.shiro.session.mgt.ExecutorServiceSessionValidationScheduler
+#sessionValidationScheduler = org.apache.shiro.session.mgt.ExecutorServiceSessionValidationScheduler
 
-# Session timeout  
-securityManager.sessionManager.defaultSessionTimeout = 1800000
+# Session timeout
+#securityManager.sessionManager.defaultSessionTimeout = 1800000
 
 # Default is 3,600,000 millis = 1 hour:
-sessionValidationScheduler.interval = 1800000
+#sessionValidationScheduler.interval = 1800000
 
-sessionValidationScheduler.sessionManager = $sessionManager
+#sessionValidationScheduler.sessionManager = $sessionManager
 
-securityManager.sessionManager.sessionValidationScheduler = $sessionValidationScheduler
+#securityManager.sessionManager.sessionValidationScheduler = $sessionValidationScheduler
