--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -4,7 +4,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.gigaspaces.httpsession.qa</groupId>
+		<groupId>com.gigaspaces.http-session.qa</groupId>
 		<artifactId>http-session-itests</artifactId>
 		<version>10.1.0-SNAPSHOT</version>
 	</parent>
@@ -32,7 +32,7 @@
 			<artifactId>gs-openspaces</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.gigaspaces.httpsession</groupId>
+			<groupId>com.gigaspaces.http-session</groupId>
 			<artifactId>gs-session-manager</artifactId>
 		</dependency>
 
@@ -47,7 +47,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.gigaspaces.httpsession.qa</groupId>
+			<groupId>com.gigaspaces.http-session.qa</groupId>
 			<artifactId>data-model</artifactId>
 			<version>${gs.version}</version>
 		</dependency>
