--- a/web/src/main/webapp/WEB-INF/shiro.ini
+++ b/web/src/main/webapp/WEB-INF/shiro.ini
@@ -1,66 +1,64 @@
 [main]
 # space proxy wraper
-connector = com.gigaspaces.httpsession.SpaceConnector
-connector.url = jini://*/*/sessionSpace
+connector=com.gigaspaces.httpsession.SpaceConnector
+connector.url=jini://*/*/sessionSpace
 # When using secured GigaSpace cluster, pass the credentials here
-# connector.username = gs
-# connector.password = gs
-# Default lease is 30 minutes - 30 * 60 * 1000 = 1800000
-connector.sessionLease = 1800000
-# Default read timeout is 5 minutes = 5 * 60 * 1000 = 300000
-connector.readTimeout = 300000
-#connector.enableTransaction = true
+# connector.username=gs
+# connector.password=gs
+# Default lease is 30 minutes - 30 * 60 * 1000=1800000
+connector.sessionLease=1800000
+# Default read timeout is 5 minutes=5 * 60 * 1000=300000
+connector.readTimeout=300000
+#connector.enableTransaction=true
 
-#sessionManager = org.apache.shiro.web.session.mgt.StandardWebSessionManager
-#sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
-sessionManager = com.gigaspaces.httpsession.GigaSpacesWebSessionManager
+#sessionManager=org.apache.shiro.web.session.mgt.StandardWebSessionManager
+#sessionManager=org.apache.shiro.web.session.mgt.DefaultWebSessionManager
+sessionManager=com.gigaspaces.httpsession.GigaSpacesWebSessionManager
 
 #set the sessionManager to use an enterprise cache for backing storage:
-sessionDAO = org.apache.shiro.session.mgt.eis.EnterpriseCacheSessionDAO
-sessionManager.sessionDAO = $sessionDAO
+sessionDAO=org.apache.shiro.session.mgt.eis.EnterpriseCacheSessionDAO
+sessionManager.sessionDAO=$sessionDAO
 
-sessionDAO.activeSessionsCacheName = jini://*/*/sessionSpace
+sessionDAO.activeSessionsCacheName=jini://*/*/sessionSpace
 # ensure the securityManager uses our native SessionManager:
-securityManager.sessionManager = $sessionManager
+securityManager.sessionManager=$sessionManager
 
 # whatever your CacheManager implementation is, for example:
-cacheManager = com.gigaspaces.httpsession.sessions.GigaSpacesCacheManager
+cacheManager=com.gigaspaces.httpsession.sessions.GigaSpacesCacheManager
 
 # Model Manager service
-storeMode = com.gigaspaces.httpsession.sessions.FullStoreMode
-storeMode.connector = $connector
-#storeMode.changeStrategy = com.gigaspaces.httpsession.policies.FailFastChangeStrategy
-listener1 = com.gigaspaces.httpsession.policies.TraceListener
-storeMode.listener = $listener1
+storeMode=com.gigaspaces.httpsession.sessions.FullStoreMode
+storeMode.connector=$connector
+#storeMode.changeStrategy=com.gigaspaces.httpsession.policies.FailFastChangeStrategy
+listener1=com.gigaspaces.httpsession.policies.TraceListener
+storeMode.listener=$listener1
 
-cacheManager.storeMode = $storeMode
+cacheManager.storeMode=$storeMode
 # Serialization Service
-serializer = com.gigaspaces.httpsession.serialize.KryoSerializerImpl
-serializer.logLevel = 1
+serializer=com.gigaspaces.httpsession.serialize.KryoSerializerImpl
+serializer.logLevel=1
 #### classes registation: class1, class2, ...,classN
-#serializer.classes = com.gigaspaces.httpsession.sessions.NestSerial , com.gigaspaces.httpsession.sessions.NestNonSerial
-cacheManager.serializer = $serializer
+#serializer.classes=com.gigaspaces.httpsession.sessions.NestSerial , com.gigaspaces.httpsession.sessions.NestNonSerial
+cacheManager.serializer=$serializer
 # Session Policy Service
-policy = com.gigaspaces.httpsession.policies.SessionPolicyWithoutLogin
-policy.connector = $connector
-policy.storeMode = $storeMode
+policy=com.gigaspaces.httpsession.policies.SessionPolicyWithoutLogin
+policy.connector=$connector
+policy.storeMode=$storeMode
 
-cacheManager.policy = $policy
+cacheManager.policy=$policy
 # space proxy setter
 cacheManager.connector= $connector
 
 # This will use GigaSpaces for _all_ of Shiro's caching needs (realms, etc), # not just for Session storage.
-securityManager.cacheManager = $cacheManager
+securityManager.cacheManager=$cacheManager
 
 # Session validation
-#sessionValidationScheduler = org.apache.shiro.session.mgt.ExecutorServiceSessionValidationScheduler
+#sessionValidationScheduler=org.apache.shiro.session.mgt.ExecutorServiceSessionValidationScheduler
 
 # Session timeout  
-#securityManager.sessionManager.defaultSessionTimeout = 1800000
+#securityManager.sessionManager.defaultSessionTimeout=1800000
 
-# Default is 3,600,000 millis = 1 hour:
-#sessionValidationScheduler.interval = 1800000
+# Default is 3,600,000 millis=1 hour:
+#sessionValidationScheduler.interval=1800000
 
-#sessionValidationScheduler.sessionManager = $sessionManager
-
-securityManager.sessionManager.sessionValidationScheduler = $sessionValidationScheduler
+#sessionValidationScheduler.sessionManager=$sessionManager
