--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -52,6 +52,12 @@
 			<version>${gs.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.esotericsoftware.kryo</groupId>
+			<artifactId>kryo</artifactId>
+			<version>${kryo.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
