--- a/web/src/main/webapp/WEB-INF/shiro.ini
+++ b/web/src/main/webapp/WEB-INF/shiro.ini
@@ -10,35 +10,43 @@ connector.sessionLease=1800000
 # Default read timeout is 5 minutes=5 * 60 * 1000=300000
 connector.readTimeout=300000
 #connector.enableTransaction=true
+connector.sessionBaseName=com.gigaspaces.httpsession.models.BiWorldWideSpaceSessionBase
 
 #sessionManager=org.apache.shiro.web.session.mgt.StandardWebSessionManager
 #sessionManager=org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 sessionManager=com.gigaspaces.httpsession.GigaSpacesWebSessionManager
 
+
 #set the sessionManager to use an enterprise cache for backing storage:
 sessionDAO=org.apache.shiro.session.mgt.eis.EnterpriseCacheSessionDAO
+#new#sessionDAO=com.gigaspaces.httpsession.GigaSpacesSessionDAO
+#new#sessionDAO.connector=$connector
+sessionDAO.activeSessionsCacheName=jini://*/*/sessionSpace
 sessionManager.sessionDAO=$sessionDAO
 
-sessionDAO.activeSessionsCacheName=jini://*/*/sessionSpace
 # ensure the securityManager uses our native SessionManager:
 securityManager.sessionManager=$sessionManager
+
 
 # whatever your CacheManager implementation is, for example:
 cacheManager=com.gigaspaces.httpsession.sessions.GigaSpacesCacheManager
 
 # Model Manager service
-storeMode=com.gigaspaces.httpsession.sessions.FullStoreMode
+storeMode=com.gigaspaces.httpsession.sessions.DeltaStoreMode
 storeMode.connector=$connector
-#storeMode.changeStrategy=com.gigaspaces.httpsession.policies.FailFastChangeStrategy
 listener1=com.gigaspaces.httpsession.policies.TraceListener
 storeMode.listener=$listener1
-
+sessionManager.storeMode=$storeMode
 cacheManager.storeMode=$storeMode
+
 # Serialization Service
 serializer=com.gigaspaces.httpsession.serialize.KryoSerializerImpl
+javaSerialization=com.esotericsoftware.kryo.serializers.JavaSerializer
+#springSerialization=de.javakaffee.web.msm.serializer.kryo.SpringSecurityUserRegistration
+serializer.classSerializers=javax.security.auth.Subject:$javaSerialization
+
 serializer.logLevel=1
-#### classes registation: class1, class2, ...,classN
-#serializer.classes=com.gigaspaces.httpsession.sessions.NestSerial , com.gigaspaces.httpsession.sessions.NestNonSerial
+
 cacheManager.serializer=$serializer
 # Session Policy Service
 policy=com.gigaspaces.httpsession.policies.SessionPolicyWithoutLogin
