--- a/sys-tests/src/test/resources/config/config.properties
+++ b/sys-tests/src/test/resources/config/config.properties
@@ -1,8 +1,8 @@
 JBOSS_HOME=/Users/shadim/dev-tools/jboss-as-7.1.1.Final
-project.basedir=/Users/shadim/src/http-session-itests
-TOMCAT_HOME=/Users/shadim/dev-tools/apache-tomcat-7.0.50
-JMETER_HOME=/Users/shadim/dev-tools/apache-jmeter-2.11
-GS_HOME=/Users/shadim/dev-tools/gigaspaces-xap-premium-10.0.0-ga
+project.basedir=/home/kobi/dev/github/xap-session-sharing-manager-itests
+TOMCAT_HOME=/home/kobi/installations/apache-tomcat-7.0.54
+JMETER_HOME=/home/kobi/installations/apache-jmeter-2.11
+GS_HOME=/home/kobi/opt/xap/10.1.0/gigaspaces-xap-premium-10.1.0-m12
 JETTY_HOME=/Users/shadim/dev-tools/jetty-distribution-9.2.0.v20140526
 SPACE_URL=
 HOST=127.0.0.1
