--- a/sys-tests/src/test/resources/shiro.ini
+++ b/sys-tests/src/test/resources/shiro.ini
@@ -18,6 +18,8 @@ cacheManager = com.gigaspaces.httpsession.sessions.GigaSpacesCacheManager
 # Default lease is 30 minutes - 30 * 60 * 1000 = 1800000
 cacheManager.sessionLease = 1800000
 
+connector.sessionBaseName=com.gigaspaces.httpsession.models.DefaultSpaceSessionStore
+
 # Keeps a local copy of session in the session manager and avoids remote read. Updates are propogated to the remote cluster. 
 # Default value is false
 # cacheManager.cacheSessionLocally = true
