--- a/data-model/pom.xml
+++ b/data-model/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>com.gigaspaces.http-session.qa</groupId>
-		<artifactId>http-session-itests</artifactId>
+		<artifactId>xap-session-sharing-manager-itests</artifactId>
 		<relativePath>../pom.xml</relativePath>
 		<version>10.1.0-SNAPSHOT</version>
 	</parent>
