--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.gigaspaces.http-session.qa</groupId>
-		<artifactId>http-session-itests</artifactId>
+		<artifactId>xap-session-sharing-manager-itests</artifactId>
 		<version>10.1.0-SNAPSHOT</version>
 	</parent>
 
@@ -44,6 +44,12 @@
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.4</version>
 		</dependency>
 
 		<dependency>
