--- a/web/pom.xml
+++ b/web/pom.xml
@@ -11,7 +11,7 @@
 
 	<parent>
 		<groupId>com.gigaspaces.http-session.qa</groupId>
-		<artifactId>http-session-itests</artifactId>
+		<artifactId>xap-session-sharing-manager-itests</artifactId>
 		<relativePath>../pom.xml</relativePath>
 		<version>10.1.0-SNAPSHOT</version>
 	</parent>
@@ -90,11 +90,6 @@
 			<groupId>com.gigaspaces.http-session</groupId>
 			<artifactId>gs-session-manager</artifactId>
 			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.gigaspaces</groupId>
-			<artifactId>gs-runtime</artifactId>
 		</dependency>
 
 		<dependency>
