Added gs version to sub modules

--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -34,6 +34,7 @@
 		<dependency>
 			<groupId>com.gigaspaces.http-session</groupId>
 			<artifactId>gs-session-manager</artifactId>
+			<version>${gs.version}</version>
 		</dependency>
 
 		<dependency>
