JBOSS has a default implementation of JAXRS called RestEasy and it is conflicting with the JAXRS implementation in JERSEY

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,21 @@
     <servlet-name>UpdateSessionServlet</servlet-name>
     <servlet-class>com.gigaspaces.examples.web.UpdateSessionServlet</servlet-class>
   </servlet>
+
+  <!--For JBoss Only-->
+  <context-param>
+    <param-name>resteasy.scan</param-name>
+    <param-value>false</param-value>
+  </context-param>
+  <context-param>
+    <param-name>resteasy.scan.providers</param-name>
+    <param-value>false</param-value>
+  </context-param>
+  <context-param>
+    <param-name>resteasy.scan.resources</param-name>
+    <param-value>false</param-value>
+  </context-param>
+
   <servlet-mapping>
     <servlet-name>UpdateSessionServlet</servlet-name>
     <url-pattern>/UpdateSessionServlet</url-pattern>
