--- a/sys-tests/src/test/resources/config/config.properties
+++ b/sys-tests/src/test/resources/config/config.properties
@@ -1,8 +1,10 @@
-JBOSS_HOME=/home/kobi/installations/jboss-as-7.1.1.Final
-project.basedir=/home/kobi/dev/github/xap-session-sharing-manager-itests
-TOMCAT_HOME=/home/kobi/installations/apache-tomcat-7.0.54
-JMETER_HOME=/home/kobi/installations/apache-jmeter-2.11
-GS_HOME=/home/kobi/opt/xap/10.1.0/gigaspaces-xap-premium-10.1.0-m12
-JETTY_HOME=/home/kobi/installations/jetty-distribution-9.2.0.v20140526
+JBOSS_HOME=/home/yohana/software/jboss/jboss-as-7.1.1.Final
+project.basedir=/home/yohana/work/Repos/github/GigaSpaces/xap-session-sharing-manager-itests/
+TOMCAT_HOME=/home/yohana/software/apache-tomcat-7.0.57
+JMETER_HOME=/home/yohana/software/apache-jmeter-2.13/apache-jmeter-2.13
+GS_HOME=/home/yohana/work/XAP/latest
+JETTY_HOME=/home/yohana/software/jetty-distribution-9.2.10.v20150310/jetty-distribution-9.2.10.v20150310
 SPACE_URL=
 HOST=127.0.0.1
+APACHE_HOME=/home/yohana/temp/apache/apachehome/
+WEBSPHERE_HOME=/home/yohana/software/websphere/wlp
