--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,20 @@
     <servlet-class>com.gigaspaces.examples.web.UpdateSessionServlet</servlet-class>
   </servlet>
 
+  <servlet>
+    <servlet-name>Jersey REST Web Service</servlet-name>
+    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+    <init-param>
+      <param-name>com.sun.jersey.config.property.packages</param-name>
+      <param-value>com.gigaspaces.examples.web</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Jersey REST Web Service</servlet-name>
+    <url-pattern>/rest/*</url-pattern>
+  </servlet-mapping>
+
   <!--For JBoss Only-->
   <context-param>
     <param-name>resteasy.scan</param-name>
