--- a/data-model/pom.xml
+++ b/data-model/pom.xml
@@ -4,7 +4,7 @@
 		<groupId>com.gigaspaces.http-session.qa</groupId>
 		<artifactId>xap-session-sharing-manager-itests</artifactId>
 		<relativePath>../pom.xml</relativePath>
-		<version>10.1.0-SNAPSHOT</version>
+		<version>10.1.0-12600-RELEASE</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
