--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.gigaspaces.http-session.qa</groupId>
 		<artifactId>xap-session-sharing-manager-itests</artifactId>
-		<version>10.1.0-SNAPSHOT</version>
+		<version>10.1.0-12600-RELEASE</version>
 	</parent>
 
 	<artifactId>sys-tests</artifactId>
@@ -90,7 +90,19 @@
 			<version>5.0.0</version>
 		</dependency>
 
-	</dependencies>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
         <testSourceDirectory>src/test/java</testSourceDirectory>
