--- a/web/pom.xml
+++ b/web/pom.xml
@@ -23,7 +23,8 @@
 
 	<properties>
 		<commons.codec.version>1.9</commons.codec.version>
-	</properties>
+        <spring-version>4.1.1.RELEASE</spring-version>
+    </properties>
 
 	<build>
 		<finalName>demo-app</finalName>
@@ -98,5 +99,22 @@
 			<artifactId>jersey-server</artifactId>
 			<version>1.9</version>
 		</dependency>
-	</dependencies>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+    </dependencies>
 </project>
