--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,19 @@
     <url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
 
+    <servlet>
+        <servlet-name>JSONServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/json-servlet.xml</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>JSONServlet</servlet-name>
+        <url-pattern>/json/*</url-pattern>
+    </servlet-mapping>
+
   <!--For JBoss Only-->
   <context-param>
     <param-name>resteasy.scan</param-name>
