--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.gigaspaces.http-session.qa</groupId>
 		<artifactId>xap-session-sharing-manager-itests</artifactId>
-		<version>10.1.0-12600-RELEASE</version>
+		<version>10.2.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>sys-tests</artifactId>
