--- a/sys-tests/src/test/resources/config/config.properties
+++ b/sys-tests/src/test/resources/config/config.properties
@@ -1,4 +1,5 @@
 JBOSS_HOME=/home/yohana/software/jboss/jboss-dist
+JBOSS8_HOME=/home/yohana/temp/jboss8/jboss8-dist
 project.basedir=/home/yohana/work/Repos/github/GigaSpaces/xap-session-sharing-manager-itests/
 TOMCAT_HOME=/home/yohana/software/apache-tomcat-7.0.61
 JMETER_HOME=/home/yohana/software/apache-jmeter-2.13/apache-jmeter-2.13
@@ -8,3 +9,4 @@ SPACE_URL=
 HOST=127.0.0.1
 APACHE_HOME=/home/yohana/temp/apachehome/
 WEBSPHERE_HOME=/home/yohana/software/websphere/wlp
+JAVA7_HOME=/usr/lib/jvm/java-7-oracle
