--- a/web/src/main/resources/log4j.properties
+++ b/web/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=INFO, file, stdout
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=../logs/gs-session-manager-demo-app.log
+log4j.appender.file.File=logs/gs-session-manager-demo-app.log
 log4j.appender.file.MaxFileSize=2048MB
 log4j.appender.file.MaxBackupIndex=2
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
