GS-12341 Updated pom.xml so it will use 2g as Xmx  and set fork to once

--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -127,7 +127,7 @@
 				</executions>
 				<configuration>
 					<testFailureIgnore>true</testFailureIgnore>
-					<argLine>-Xmx256m -Xms256m</argLine>
+                    <argLine>-Xmx2g -Xms2g</argLine>
 					<!--<includes>
 						<include>**/SystemTestSuite.java</include>
 					</includes>-->
