--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <fork>true</fork>
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
@@ -133,6 +134,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.14.1</version>
                 <configuration>
+                    <forkMode>once</forkMode>
                     <testFailureIgnore>true</testFailureIgnore>
                     <argLine>-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError</argLine>
                 </configuration>
