--- a/sys-tests/pom.xml
+++ b/sys-tests/pom.xml
@@ -45,6 +45,11 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.hornetq</groupId>
+            <artifactId>hornetq-core</artifactId>
+            <version>2.2.21.Final</version>
+        </dependency>
 
 		<dependency>
 			<groupId>com.gigaspaces</groupId>
