--- a/tutorial-demo-app/src/main/webapp/WEB-INF/shiro.ini
+++ b/tutorial-demo-app/src/main/webapp/WEB-INF/shiro.ini
@@ -2,7 +2,7 @@
 [main]
 # space proxy wraper
 connector=com.gigaspaces.httpsession.SpaceConnector
-connector.url=jini://*/*/sessionSpace?groups=yohanaPC
+connector.url=jini://*/*/sessionSpace
 # When using secured GigaSpace cluster, pass the credentials here
 # connector.username = <username>
 # connector.password = <password>
