GS-12341 Removed group

--- a/web/src/main/webapp/WEB-INF/shiro.ini
+++ b/web/src/main/webapp/WEB-INF/shiro.ini
@@ -1,7 +1,7 @@
 [main]
 # space proxy wraper
 connector=com.gigaspaces.httpsession.SpaceConnector
-connector.url=jini://*/*/sessionSpace?groups=kobi
+connector.url=jini://*/*/sessionSpace
 # When using secured GigaSpace cluster, pass the credentials here
 # connector.username=gs
 # connector.password=gs
